syntax = "proto3";

package demo_task;

option go_package = "github.com/Joker666/microservice-demo/protos/task";

import "project/project.proto";
import "user/user.proto";

service TaskSvc {
    rpc createTask (CreateTaskRequest) returns (TaskResponse);
    rpc updateTask (UpdateTaskRequest) returns (TaskResponse);
    rpc listTasks (ListTasksRequest) returns (ListTasksResponse);
}

message ListTasksRequest {
    string project_id = 1;
    string tag_id = 2;
    string assigned_user_id = 3;
}

message CreateTaskRequest {
    string user_id = 1;
    string name = 2;
    string project_id = 3;
    string tag_id = 4;
    string assigned_user_id = 5;
}

message UpdateTaskRequest {
    string user_id = 1;
    string task_id = 2;
    string tag_id = 3;
    string assigned_user_id = 4;
}

message ListTasksResponse {
    repeated TaskResponse tasks = 1;
}

message TaskResponse {
    string id = 1;
    string user_id = 2;
    string name = 3;
    string project_id = 4;
    string tag_id = 5;
    string assigned_user_id = 6;
    demo_project.ProjectResponse project = 7;
    demo_project.TagResponse tag = 8;
    demo_user.VerifyResponse assigned_user = 9;
}